--- a/app/views/static/contact.html.erb
+++ b/app/views/static/contact.html.erb
@@ -21,8 +21,7 @@
   <!-- Section heading -->
   <h2 class="h1-responsive font-weight-bold text-center my-5">Entrons en contact !</h2>
   <!-- Section description -->
-  <p class="text-center w-responsive mx-auto pb-5">Parfois, un simple "collab bro ?" peut déboucher sur de grandes aventures, ne
-laissons pas passer la notre ! Balance des memes, des idées, des artistes, ou n'importe quelle suggestion. Au plaisir de te rencontrer :)</p>
+  <p class="text-center w-responsive mx-auto pb-5">Promis je mets OpenStreetMap ce week-end.</p>
 
   <!-- Grid row -->
   <div class="row">
@@ -37,7 +36,7 @@ laissons pas passer la notre ! Balance des memes, des idées, des artistes, ou n
           <div class="form-header blue accent-1">
             <h3 class="mt-2"><i class="fas fa-envelope"></i> Contact :</h3>
           </div>
-          <p class="dark-grey-text">En vrai ça fonctionne pas, mais t'as mon num l'ami.e, hésite pas !</p>
+          <p class="dark-grey-text">En vrai ça fonctionne pas, mais si tu veux t'as mon numéro :^)</p>
           <!-- Body -->
           <div class="md-form">
             <i class="fas fa-user prefix grey-text"></i>
@@ -60,7 +59,7 @@ laissons pas passer la notre ! Balance des memes, des idées, des artistes, ou n
             <label for="form-text">Mot doux</label>
           </div>
           <div class="text-center">
-            <button class="btn btn-light-blue">Soumettre</button>
+            <button class="btn btn-outline-info btn-rounded btn-block z-depth-0 my-4 waves-effect">Soumettre</button>
           </div>
         </div>
       </div>
