--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,42 +7,42 @@
       <div class="input-group-prepend">
         <span class="input-group-text" id="basic-addon1">Prénom</span>
       </div>
-      <%= text_field_tag 'first_name', nil, :placeholder => 'ex: José' %>
+      <%= text_field_tag 'first_name', nil, :placeholder => 'Jacob' %>
     </div>
     
     <div class="input-group mb-3">
       <div class="input-group-prepend">
         <span class="input-group-text" id="basic-addon1">Nom</span>
       </div>
-      <%= text_field_tag 'last_name', nil, :placeholder => 'ex: Bové' %>
+      <%= text_field_tag 'last_name', nil, :placeholder => 'Appelbaum' %>
     </div>
 
     <div class="input-group mb-3">
       <div class="input-group-prepend">
         <span class="input-group-text" id="basic-addon1">Description</span>
       </div>
-      <%= text_field_tag 'description', nil, :placeholder => 'ex: Je suis gentil' %>
+      <%= text_field_tag 'description', nil, :placeholder => 'Je suis gentil' %>
     </div>
 
     <div class="input-group mb-3">
       <div class="input-group-prepend">
         <span class="input-group-text" id="basic-addon1">Email</span>
       </div>
-      <%= text_field_tag 'email', nil, :placeholder => 'ex: jose.bove@domain.fr' %>
+      <%= text_field_tag 'email', nil, :placeholder => 'aze@yopmail.com' %>
     </div>
 
     <div class="input-group mb-3">
       <div class="input-group-prepend">
         <span class="input-group-text" id="basic-addon1">Age</span>
       </div>
-      <%= text_field_tag 'age', nil, :placeholder => 'ex: 42' %>
+      <%= text_field_tag 'age', nil, :placeholder => '42' %>
     </div>
 
     <div class="input-group mb-3">
       <div class="input-group-prepend">
         <span class="input-group-text" id="basic-addon1">Ville</span>
       </div>
-      <%= text_field_tag 'city', nil, :placeholder => 'ex: Gre' %>
+      <%= text_field_tag 'city', nil, :placeholder => 'Chaux-Les-Crotenay' %>
     </div>
 
     <div class="input-group mb-3">
