--- a/app/views/gossips/new.html.erb
+++ b/app/views/gossips/new.html.erb
@@ -1,17 +1,37 @@
-<%= form_tag url_for(action: 'create'), method: 'post' do %>
+<div class="jumbotron">
+  <div class="container">
 
-    <%= label_tag 'Titre' %>
-    <%= text_field_tag 'title' %>
-    <br>
+<!-- Material form contact -->
+    <div class="card">
 
-    <%= label_tag 'Contenu' %>
-    <%= text_field_tag 'content' %>
-    <br>
+      <h5 class="card-header info-color white-text text-center py-4">
+          <strong>Nouveau Gossip</strong>
+      </h5>
 
-      <input type="hidden" name="user_id" value=<%= User.find_by(first_name: 'anonymous').id %> >
+        <!--Card content-->
+        <div class="card-body px-lg-5 pt-0">
 
-    <%= submit_tag "Créer un gossip" %>
+          <!-- Form -->
+          <%= form_tag url_for(action: 'create'), method: 'post', class: 'text-center' do %>
 
+
+            <!-- Name -->
+            <br><br>
+            <div class="md-form">
+             <%= text_field_tag 'title', "", class: "form-control", placeholder: "Titre"%>
+            </div><br>
+
+            <!--Message-->
+            <div class="md-form">
+              <%= text_area_tag 'content', nil, class: "form-control md-textarea", rows: "4", placeholder: "Selma est un bot... \\o/" %>
+            </div><br>
+          
+          <%= submit_tag 'Publier', class: "btn btn-outline-info btn-rounded btn-block z-depth-0 my-4 waves-effect" %>
+        </form>
+      </div>
+    </div>
+  </div>
+<div>
     <% if @gossip.errors.any? %>
       <p>Nous n'avons pas réussi à créer le potin pour la (ou les) raison(s) suivante(s) :</p>
         <ul>
