--- a/app/views/gossips/show.html.erb
+++ b/app/views/gossips/show.html.erb
@@ -48,14 +48,21 @@
       
       <% if current_user.present? %>
         <%= link_to 'Éditer', edit_gossip_path(@gossip.id), :class => "btn btn-primary" %>
-      <p><a
+
+        <% if is_owner?(@gossip) %>
+          <%= link_to 'Supprimer', gossip_path(@gossip.id),
+          :method => 'delete', :class => "btn btn-secondary", :confirm => "Sûr ?" %>
+        <% end %>
+
+              
+      <!-- <p><a
         class="btn btn-secondary"
         href="<%= gossip_path(@gossip.id) %>"
         rel="nofollow"
         data-method="delete"
         data-confirm="Es-tu sûr de vouloir supprimer le potin?"
         role="button">Supprimer
-      </a></p>
+      </a></p>-->
 
       <!-- <%= link_to 'Plussoyer', like_gossip_path%> 1H que je bloque (oublié le "as:" dans routes.rb), il est 2H ce sera pour demain :( -->
       <% end %>
