--- a/app/views/index/home.html.erb
+++ b/app/views/index/home.html.erb
@@ -21,7 +21,7 @@
 
       <% @gossips.each do |gossip| %>
 
-        <div class="animated wow fadeIn slow">
+        <div class="animated wow fadeIn">
           <div class="card" style="width: 18rem;">
             <div class="card-body">
               <h5 class="card-title"><%= gossip.title %></h5>
